--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex flex-column align-items-center justify-content-center">
-                    <img id="imagem_fim_jogo" src="/imagens/game.png" alt="aplicativo mata mosquito">
+                    <img id="imagem_fim_jogo" src="./imagens/game.png" alt="aplicativo mata mosquito">
                 </div>
             </div>
         </div>
