--- a/fim_de_jogo.html
+++ b/fim_de_jogo.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex flex-column align-items-center justify-content-center">
-                    <img src="/imagens/game_over.png" alt="game over">
+                    <img src="./imagens/game_over.png" alt="game over">
                     <button  class="btn btn-info btn-lg text-white  fw-bold" onclick="window.location.href = 'index.html'">Reiniciar o jogo</button>
                 </div>
                 
