--- a/app.html
+++ b/app.html
@@ -16,9 +16,9 @@
 
         <!--Mostrará o número de vidas restantes-->
         <div class="vidas">
-            <img id="v1" src="/imagens/coracao_cheio.png" alt="">
-            <img id="v2" src="/imagens/coracao_cheio.png" alt="">
-            <img id="v3" src="/imagens/coracao_cheio.png" alt="">
+            <img id="v1" src="./imagens/coracao_cheio.png" alt="">
+            <img id="v2" src="./imagens/coracao_cheio.png" alt="">
+            <img id="v3" src="./imagens/coracao_cheio.png" alt="">
         </div>
 
         <!--Mostrará o tempo restante-->
