--- a/vitoria.html
+++ b/vitoria.html
@@ -18,7 +18,7 @@
         <div class="row">
             <div class="col">
                 <div class="d-flex flex-column align-items-center justify-content-center">
-                    <img id="imagem_fim_jogo" src="/imagens/vitoria.png" alt="venceu o jogo">
+                    <img id="imagem_fim_jogo" src="./imagens/vitoria.png" alt="venceu o jogo">
                     <button  class="btn btn-info btn-lg text-white  fw-bold" onclick="window.location.href = 'index.html'">Jogar novamente</button>
                 </div>
                 
